fix: getNearbyAttractions test with 5 nearest attractions